fixed spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -276,19 +276,15 @@ a:focus {
     -o-background-size: cover;
 }
 
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
-}
+
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
     .download-section {
-        padding: 100px 0;
+        padding: 70px 0;
     }
 
     #map {
@@ -344,7 +340,7 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 80px 0;
 }
 
 footer p {
